--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
   "dependencies": {
     "js-yaml": "^3.13.1",
     "jshint": "^2.11.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0"
   }
 }
