--- a/lib_src/tsconfig.json
+++ b/lib_src/tsconfig.json
@@ -27,7 +27,7 @@
     // "importHelpers": true, // if true you should add tslib to deps
     // "skipLibCheck": false,
 
-    "outDir": "../lib",
+    "outDir": "../lib"
   },
   "compileOnSave": true
 }
