--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "version": "0.1.3",
   "author": "Amin Yahyaabadi, Peter deHaan",
   "scripts": {
-    "link": "npm link eslint-plugin-yaml\n",
-    "test_ci": "eslint ./spec/ci.yml --ext yml",
+    "link": "npm link eslint-plugin-yaml",
+    "test_ci": "eslint --no-eslintrc --plugin yaml --ext yml ./spec/ci.yml",
     "test": "npm run link & npm run test_ci"
   },
   "keywords": [
@@ -35,11 +35,10 @@
   },
   "dependencies": {
     "js-yaml": "^3.13.1",
-    "jshint": "^2.11.0"
+    "eslint-plugin-json": "^2.1.1",
+    "eslint": "^6.8.0"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-plugin-json": "^2.1.1",
     "@types/eslint": "^6.1.8",
     "@types/js-yaml": "^3.12.2",
     "@typescript-eslint/eslint-plugin": "latest",
