--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "version": "0.1.3",
   "author": "Amin Yahyaabadi, Peter deHaan",
   "scripts": {
-    "test-link": "cd spec && npm link '../' && cd ..",
+    "test-link": "npm link './' && cd spec && npm link '../' && cd ..",
     "test": "eslint --config spec/.eslintrc.json --ext yml ./spec",
     "lint": "eslint .",
     "build": "tsc -p src/tsconfig.json || echo done",
-    "prepare": "npm run build && npm run test-link"
+    "prepare": "npm run build"
   },
   "files": [
     "src/**",
