--- a/spec/ci.yml
+++ b/spec/ci.yml
@@ -11,12 +11,14 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: "13.x"
+          node-version: "14.x"
       - name: Install NPM dependencies
         run: |
           npm ci  # uses locked module. use `npm install` for non-locked
       - name: Run tests 👩🏾‍💻
-        run: npm run test
+        run: |
+          npm run test-link
+          npm run test
       - name: Lint ✨
         run: npm run lint
 
