test-link after install

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,9 @@ jobs:
       - name: Install NPM dependencies
         run: |
           npm ci  # uses locked module. use `npm install` for non-locked
-      - name: Run tests 👩🏾‍💻
-        run: |
           npm run test-link
-          npm run test
+      - name: Run tests 👩🏾‍💻
+        run: npm run test
       - name: Lint ✨
         run: npm run lint
 
