--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: "14.x"
+      asdasdasd node-version: "14.x"
       - name: Install NPM dependencies
         run: |
           npm ci  # uses locked module. use `npm install` for non-locked
