Fix top-level files error

--- a/spec/.eslintrc.json
+++ b/spec/.eslintrc.json
@@ -11,7 +11,8 @@
     // YAML files
     {
       "files": ["*.yaml", "*.yml"],
-      "plugins": ["yaml"]
+      "plugins": ["yaml"],
+      "extends": ["plugin:yaml/recommended"]
     }
   ]
 }
