--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,10 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: "14.x"
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v1.2.0
+        with:
+          version: 4.11.1
       - name: Install NPM dependencies
         run: |
           npm install
