--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,33 +1,31 @@
 {
   "compilerOptions": {
-    //// Linting Options - Uncomment options to get more features (usually more restrictive)
     "strict": true,
-    "forceConsistentCasingInFileNames": true,
+    "strictNullChecks": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
     "noFallthroughCasesInSwitch": true,
-    "allowJs": true,
-    //// Compilation options
     "declaration": true,
     "emitDecoratorMetadata": true,
-    "esModuleInterop": true,
     "experimentalDecorators": true,
     "incremental": true,
-    // "inlineSourceMap": true,
-    // "preserveConstEnums": true,
-    // "sourceMap": true,
+    "inlineSourceMap": true,
+    "inlineSources": true,
     "preserveSymlinks": true,
     "removeComments": true,
-    "lib": ["ES2020"],
-    "target": "ES2020",
+    "jsx": "react",
+    "jsxFactory": "etch.dom",
+    "lib": ["ES2018", "dom"],
+    "target": "ES2018",
+    "allowJs": true,
+    "esModuleInterop": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    // "noLib": false,
-    // "importHelpers": true, // if true you should add tslib to deps
-    // "skipLibCheck": false,
-
+    "importHelpers": false,
     "outDir": "../lib"
   },
-  "compileOnSave": true
+  "compileOnSave": false
 }
