--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: "14.x"
       - name: Setup PNPM
-        uses: pnpm/action-setup@v1.2.0
+        uses: pnpm/action-setup@master
         with:
-          version: 4.11.1
+          version: latest
       - name: Install NPM dependencies
         run: |
           npm install
