--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -17,9 +17,8 @@
         "preserveSymlinks": true,
         "removeComments": true,
         "jsx": "react",
-        "jsxFactory": "etch.dom",
-        "lib": ["ES2018", "dom"],
-        "target": "ES2018",
+        "lib": ["es2019", "dom"],
+        "target": "es2018",
         "allowJs": true,
         "esModuleInterop": true,
         "module": "commonjs",
