--- a/spec/ci.yml
+++ b/spec/ci.yml
@@ -1,29 +1,29 @@
 name: CI
 on:
-    - push
-    - pull_request
+  - push
+  - pull_request
 
 jobs:
-    Test:
-        if: "!contains(github.event.head_commit.message, '[skip ci]')"
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-node@v1
-              with:
-                  node-version: "14.x"
-            - name: Install NPM dependencies
-              run: |
-                  npm ci  # uses locked module. use `npm install` for non-locked
-                  npm run test-link
-            - name: Run tests 👩🏾‍💻
-              run: npm run test
-            - name: Lint ✨
-              run: npm run lint
+  Test:
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        - node: [11, 12, 14]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.version }}
 
-    Skip:
-        if: contains(github.event.head_commit.message, '[skip ci]')
-        runs-on: ubuntu-latest
-        steps:
-            - name: Skip CI 🚫
-              run: echo skip ci
+      - name: Install dependencies
+        run: |
+          npm install
+
+      - name: Run tests 👩🏾‍💻
+        run: |
+          npm run test-link
+          npm run test
+
+      - name: Lint ✨
+        run: npm run lint
