--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,12 @@ jobs:
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        - node: [11, 12, 14]
+        node:
+          - 11
+          - 12
+          - 14
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
