--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,4 @@
 {
   "extends": "eslint-config-atomic",
-  "ignorePatterns": ["lib/", "node_modules/"]
+  "ignorePatterns": ["dist/", "node_modules/"]
 }
