--- a/package.json
+++ b/package.json
@@ -1,23 +1,51 @@
 {
   "name": "eslint-plugin-yaml",
-  "main": "lib/index.js",
-  "description": "Lint YAML files",
   "version": "0.5.0",
-  "author": "Amin Yahyaabadi, Peter deHaan",
-  "scripts": {
-    "lint": "eslint . --fix",
-    "test.lint": "eslint .",
-    "format": "prettier . --write",
-    "test.format": "prettier . --check",
-    "test-link": "pnpm link .",
-    "test": "eslint --ext yml ./spec ./.github",
-    "build": "tsc -p src/tsconfig.json",
-    "prepare": "npm run build"
+  "description": "Lint YAML files",
+  "homepage": "https://github.com/aminya/eslint-plugin-yaml#readme",
+  "bugs": {
+    "url": "https://github.com/aminya/eslint-plugin-yaml/issues"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aminya/eslint-plugin-yaml.git"
+  },
+  "license": "MIT",
+  "author": "Amin Yahyaabadi, Peter deHaan",
+  "main": "dist/index.js",
   "files": [
     "src/**",
-    "lib/**"
+    "dist/**"
   ],
+  "scripts": {
+    "build": "tsc",
+    "format": "prettier . --write",
+    "lint": "eslint . --fix",
+    "prepare": "npm run build",
+    "test": "eslint --ext yml ./spec ./.github",
+    "test-link": "pnpm link .",
+    "test.format": "prettier . --check",
+    "test.lint": "eslint ."
+  },
+  "dependencies": {
+    "js-yaml": "^4.1.0",
+    "jshint": "^2.13.6"
+  },
+  "devDependencies": {
+    "@types/eslint": "8.56.10",
+    "@types/js-yaml": "^4.0.9",
+    "@types/jshint": "^2.12.4",
+    "@typescript-eslint/eslint-plugin": "7.11.0",
+    "@typescript-eslint/parser": "7.11.0",
+    "eslint": "^8",
+    "eslint-config-atomic": "^1.21.2",
+    "prettier": "^3.2.5",
+    "prettier-config-atomic": "^4.0.0",
+    "typescript": "^5.4.5"
+  },
+  "engines": {
+    "node": ">=12"
+  },
   "keywords": [
     "eslint",
     "eslintplugin",
@@ -26,37 +54,5 @@
     "yml",
     "eslint-plugin-yaml",
     "eslint-plugin-yml"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aminya/eslint-plugin-yaml.git"
-  },
-  "bugs": {
-    "url": "https://github.com/aminya/eslint-plugin-yaml/issues"
-  },
-  "homepage": "https://github.com/aminya/eslint-plugin-yaml#readme",
-  "directories": {
-    "lib": "lib"
-  },
-  "license": "MIT",
-  "engines": {
-    "node": "*"
-  },
-  "dependencies": {
-    "js-yaml": "^4.1.0",
-    "jshint": "^2.13.0"
-  },
-  "devDependencies": {
-    "@types/eslint": "latest",
-    "@types/js-yaml": "^4.0.1",
-    "@types/jshint": "^2.12.0",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
-    "eslint": "latest",
-    "eslint-config-atomic": "^1.15.3",
-    "prettier": "latest",
-    "prettier-config-atomic": "^2.0.5",
-    "typescript": "latest"
-  },
-  "prettier": "prettier-config-atomic"
+  ]
 }
