--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,15 +16,16 @@
     "inlineSources": true,
     "preserveSymlinks": true,
     "removeComments": true,
-    "jsx": "react",
-    "lib": ["es2019", "dom"],
-    "target": "es2018",
+    "lib": ["ES2019"],
+    "target": "ES2019",
     "allowJs": true,
     "esModuleInterop": true,
     "module": "commonjs",
     "moduleResolution": "node",
+    "skipLibCheck": true,
     "importHelpers": false,
-    "outDir": "../lib"
+    "outDir": "./dist"
   },
+  "include": ["src/**/*.ts"],
   "compileOnSave": false
 }
