--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "license": "MIT",
   "author": "Amin Yahyaabadi, Peter deHaan",
-  "main": "dist/index.js",
+  "type": "module",
+  "main": "dist/index.cjs",
   "files": [
     "src/**",
     "dist/**"
@@ -21,8 +22,8 @@
     "build": "tsc",
     "format": "prettier . --write",
     "lint": "eslint . --fix",
-    "prepare": "npm run build",
-    "test": "eslint --ext yml ./spec ./.github",
+    "prepare": "pnpm run build",
+    "test": "eslint ./**/*.yml ./**/*.yaml",
     "test-link": "pnpm link .",
     "test.format": "prettier . --check",
     "test.lint": "eslint ."
