feat: support EsLint 9

--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "format": "prettier . --write",
     "lint": "eslint . --fix",
     "prepare": "pnpm run build",
-    "test": "eslint ./**/*.yml ./**/*.yaml",
+    "test": "eslint ./spec/**/*.yml ./spec/**/*.yaml --config ./eslint.config.cjs",
     "test-link": "pnpm link .",
+    "test.eslint8": "npx eslint@8 ./spec/**/spec/*.yml ./spec/**/*.yaml --config ./.eslintrc.json",
     "test.format": "prettier . --check",
     "test.lint": "eslint ."
   },
@@ -38,7 +39,7 @@
     "@types/jshint": "^2.12.4",
     "@typescript-eslint/eslint-plugin": "7.11.0",
     "@typescript-eslint/parser": "7.11.0",
-    "eslint": "^8",
+    "eslint": "^9",
     "eslint-config-atomic": "^1.21.2",
     "prettier": "^3.2.5",
     "prettier-config-atomic": "^4.0.0",
