fix: fix Eslint 9 support

--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "build": "tsc",
     "format": "prettier . --write",
     "lint": "eslint . --fix",
-    "prepare": "pnpm run build",
-    "test": "eslint ./spec/**/*.yml ./spec/**/*.yaml --config ./eslint.config.cjs",
-    "test-link": "pnpm link .",
+    "test": "pnpm run build && eslint spec/**/*.{yml,yaml} --config ./eslint.config.cjs",
     "test.eslint8": "npx eslint@8 ./spec/**/spec/*.yml ./spec/**/*.yaml --config ./.eslintrc.json",
     "test.format": "prettier . --check",
     "test.lint": "eslint ."
@@ -37,11 +35,11 @@
     "@types/eslint": "8.56.10",
     "@types/js-yaml": "^4.0.9",
     "@types/jshint": "^2.12.4",
-    "@typescript-eslint/eslint-plugin": "7.11.0",
-    "@typescript-eslint/parser": "7.11.0",
+    "@typescript-eslint/eslint-plugin": "7.13.0",
+    "@typescript-eslint/parser": "7.13.0",
     "eslint": "^9",
     "eslint-config-atomic": "^1.21.2",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.2",
     "prettier-config-atomic": "^4.0.0",
     "typescript": "^5.4.5"
   },
