--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,9 @@ jobs:
         run: |
           pnpm install
 
+      - name: Build 🏗
+        run: pnpm run build
+
       - name: Run tests 👩🏾‍💻
         run: |
           pnpm run test-link
