fix: try to recover Eslint 8 support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "resolveJsonModule": true,
     "strict": true,
     "strictNullChecks": true,
     "noUnusedLocals": true,
@@ -24,9 +25,7 @@
     "moduleResolution": "node",
     "skipLibCheck": true,
     "importHelpers": false,
-    "outDir": "./dist",
-    "resolveJsonModule": true
+    "noEmit": true
   },
-  "include": ["src/**/*.ts", "src/index.cts"],
   "compileOnSave": false
 }
