--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,5 @@ jobs:
 
       - name: Run tests 👩🏾‍💻
         run: |
-          pnpm run test-link
           pnpm run test
-
-      - name: Lint ✨
-        run: pnpm run lint
+          pnpm run test.eslint8
