--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "dist/**"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p ./src/tsconfig.json",
     "format": "prettier . --write",
     "lint": "eslint . --fix",
     "test": "pnpm run build && eslint spec/**/*.{yml,yaml} --config ./eslint.config.cjs",
-    "test.eslint8": "npx eslint@8 ./spec/**/spec/*.yml ./spec/**/*.yaml --config ./.eslintrc.json",
+    "test.eslint8": "pnpm run build && pnpm link . && cross-env ESLINT_USE_FLAT_CONFIG=false npx eslint@8 spec/**/*.{yml,yaml} --config .eslintrc.cjs",
     "test.format": "prettier . --check",
     "test.lint": "eslint ."
   },
@@ -37,6 +37,7 @@
     "@types/jshint": "^2.12.4",
     "@typescript-eslint/eslint-plugin": "7.13.0",
     "@typescript-eslint/parser": "7.13.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-atomic": "^1.21.2",
     "prettier": "^3.3.2",
