chore: update dev-dependencies

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     }
   },
   "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "source": "src/index.mts",
   "files": [
     "src/**",
     "dist/**"
@@ -44,11 +46,11 @@
     "@types/eslint": "8.56.10",
     "@types/js-yaml": "^4.0.9",
     "@types/jshint": "^2.12.4",
-    "@typescript-eslint/eslint-plugin": "7.13.0",
-    "@typescript-eslint/parser": "7.13.0",
+    "@typescript-eslint/eslint-plugin": "7.13.1",
+    "@typescript-eslint/parser": "7.13.1",
     "cross-env": "^7.0.3",
-    "eslint": "^9",
-    "eslint-config-atomic": "^1.21.2",
+    "eslint": "^9.5.0",
+    "eslint-config-atomic": "^1.22.0",
     "npm-run-all2": "^6.2.0",
     "prettier": "^3.3.2",
     "prettier-config-atomic": "^4.0.0",
