--- a/package.json
+++ b/package.json
@@ -43,30 +43,30 @@
     "test.mjs": "cross-env NODE_OPTIONS=--enable-source-maps eslint spec/**/*.{yml,yaml} --config ./eslint.config.mjs"
   },
   "dependencies": {
-    "@types/estree": "^1.0.7",
+    "@types/estree": "1.0.7",
     "eslint-plugin-yaml": "link:",
-    "estree-util-value-to-estree": "^3.3.2",
-    "js-yaml": "^4.1.0",
-    "jshint": "^2.13.6"
+    "estree-util-value-to-estree": "3.3.2",
+    "js-yaml": "4.1.0",
+    "jshint": "2.13.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@types/babel__core": "~7.20.5",
-    "@types/eslint": "8.56.10",
-    "@types/js-yaml": "^4.0.9",
-    "@types/jshint": "^2.12.4",
-    "@typescript-eslint/eslint-plugin": "7.13.1",
-    "@typescript-eslint/parser": "7.13.1",
-    "@upleveled/babel-plugin-remove-node-prefix": "^1.0.5",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.5.0",
-    "eslint-config-atomic": "^1.22.0",
-    "npm-run-all2": "^6.2.0",
-    "prettier": "^3.3.2",
-    "prettier-config-atomic": "^4.0.0",
-    "typescript": "^5.4.5",
-    "vite": "^6.2.3",
-    "vite-plugin-babel": "^1.3.0"
+    "@babel/core": "7.26.10",
+    "@types/babel__core": "7.20.5",
+    "@types/eslint": "9.6.1",
+    "@types/js-yaml": "4.0.9",
+    "@types/jshint": "2.12.4",
+    "@typescript-eslint/eslint-plugin": "8.28.0",
+    "@typescript-eslint/parser": "8.28.0",
+    "@upleveled/babel-plugin-remove-node-prefix": "1.0.5",
+    "cross-env": "7.0.3",
+    "eslint": "9.23.0",
+    "eslint-config-atomic": "1.22.1",
+    "npm-run-all2": "7.0.2",
+    "prettier": "3.5.3",
+    "prettier-config-atomic": "4.0.0",
+    "typescript": "5.8.2",
+    "vite": "6.2.3",
+    "vite-plugin-babel": "1.3.0"
   },
   "engines": {
     "node": ">=12"
