feat: add yaml as an ESLint language

--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "build.legacy": "vite build --mode legacy",
     "build.modern": "vite build --mode modern",
     "build.tsc": "tsc --pretty -p tsconfig.build.json",
-    "dev": "vite build --watch",
+    "dev": "run-p dev.legacy dev.modern dev.tsc",
+    "dev.legacy": "vite build --mode legacy --watch",
+    "dev.modern": "vite build --mode modern --watch",
+    "dev.tsc": "tsc --pretty -p tsconfig.build.json --watch",
     "format": "prettier . --write",
     "link.self": "pnpm link .",
     "lint": "run-s link.self build && cross-env NODE_OPTIONS=--enable-source-maps eslint . --fix",
